k8s/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-k8s-sample
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-k8s-sample
  template:
    metadata:
      labels:
        app: react-k8s-sample
    spec:
      containers:
      - name: react
        image: barry1234/frontd
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: react-k8s-sample
spec:
  type: NodePort
  selector:
    app: react-k8s-sample
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30007
      name: react-k8s-sample
